--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mongod": "^2.0.0",
     "mongoose": "^8.1.2",
     "nodemon": "^3.0.3",
